// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PriceField /> renders when disabled 1`] = `
<div
  className="MuiFormControl-root-5 MuiFormControl-fullWidth-8"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="MuiInput-root-9 MuiInput-disabled-12 MuiInput-formControl-10 MuiInput-underline-13"
  >
    <input
      aria-invalid={false}
      aria-required={false}
      autoComplete={undefined}
      autoFocus={undefined}
      className="MuiInput-input-17 MuiInput-disabled-12 MuiInput-inputType-20"
      defaultValue={undefined}
      disabled={true}
      id={undefined}
      name="price"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder={undefined}
      readOnly={undefined}
      required={undefined}
      rows={undefined}
      type="number"
      value=""
    />
    <span />
  </div>
</div>
`;

exports[`<PriceField /> renders with currency symbol 1`] = `
<div
  className="MuiFormControl-root-5 MuiFormControl-fullWidth-8"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="MuiInput-root-9 MuiInput-formControl-10 MuiInput-underline-13"
  >
    <input
      aria-invalid={false}
      aria-required={false}
      autoComplete={undefined}
      autoFocus={undefined}
      className="MuiInput-input-17 MuiInput-inputType-20"
      defaultValue={undefined}
      disabled={false}
      id={undefined}
      name="price"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder={undefined}
      readOnly={undefined}
      required={undefined}
      rows={undefined}
      type="number"
      value=""
    />
    <div
      className="MuiInputAdornment-root-36 MuiInputAdornment-positionEnd-38"
    >
      <p
        className="MuiTypography-root-39 MuiTypography-body1-48 MuiTypography-colorTextSecondary-61"
      >
        $
      </p>
    </div>
  </div>
</div>
`;

exports[`<PriceField /> renders with hint 1`] = `
<div
  className="MuiFormControl-root-5 MuiFormControl-fullWidth-8"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="MuiInput-root-9 MuiInput-formControl-10 MuiInput-underline-13"
  >
    <input
      aria-invalid={false}
      aria-required={false}
      autoComplete={undefined}
      autoFocus={undefined}
      className="MuiInput-input-17 MuiInput-inputType-20"
      defaultValue={undefined}
      disabled={false}
      id={undefined}
      name="price"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder={undefined}
      readOnly={undefined}
      required={undefined}
      rows={undefined}
      type="number"
      value=""
    />
    <span />
  </div>
  <p
    className="MuiFormHelperText-root-32"
  >
    Lorem ipsum
  </p>
</div>
`;

exports[`<PriceField /> renders with label 1`] = `
<div
  className="MuiFormControl-root-5 MuiFormControl-fullWidth-8"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <label
    className="MuiFormLabel-root-27 MuiInputLabel-root-22 MuiInputLabel-formControl-23 MuiInputLabel-animated-26"
    data-shrink={false}
    htmlFor="price"
  >
    Lorem ipsum
  </label>
  <div
    className="MuiInput-root-9 MuiInput-formControl-10 MuiInput-underline-13"
  >
    <input
      aria-invalid={false}
      aria-required={false}
      autoComplete={undefined}
      autoFocus={undefined}
      className="MuiInput-input-17 MuiInput-inputType-20"
      defaultValue={undefined}
      disabled={false}
      id={undefined}
      name="price"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder={undefined}
      readOnly={undefined}
      required={undefined}
      rows={undefined}
      type="number"
      value=""
    />
    <span />
  </div>
</div>
`;

exports[`<PriceField /> renders with label and hint 1`] = `
<div
  className="MuiFormControl-root-5 MuiFormControl-fullWidth-8"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <label
    className="MuiFormLabel-root-27 MuiInputLabel-root-22 MuiInputLabel-formControl-23 MuiInputLabel-animated-26"
    data-shrink={false}
    htmlFor="price"
  >
    Lorem
  </label>
  <div
    className="MuiInput-root-9 MuiInput-formControl-10 MuiInput-underline-13"
  >
    <input
      aria-invalid={false}
      aria-required={false}
      autoComplete={undefined}
      autoFocus={undefined}
      className="MuiInput-input-17 MuiInput-inputType-20"
      defaultValue={undefined}
      disabled={false}
      id={undefined}
      name="price"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder={undefined}
      readOnly={undefined}
      required={undefined}
      rows={undefined}
      type="number"
      value=""
    />
    <span />
  </div>
  <p
    className="MuiFormHelperText-root-32"
  >
    Ipsum
  </p>
</div>
`;

exports[`<PriceField /> renders with no value 1`] = `
<div
  className="MuiFormControl-root-5 MuiFormControl-fullWidth-8"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="MuiInput-root-9 MuiInput-formControl-10 MuiInput-underline-13"
  >
    <input
      aria-invalid={false}
      aria-required={false}
      autoComplete={undefined}
      autoFocus={undefined}
      className="MuiInput-input-17 MuiInput-inputType-20"
      defaultValue={undefined}
      disabled={false}
      id={undefined}
      name="price"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder={undefined}
      readOnly={undefined}
      required={undefined}
      rows={undefined}
      type="number"
      value=""
    />
    <span />
  </div>
</div>
`;

exports[`<PriceField /> renders with value 1`] = `
<div
  className="MuiFormControl-root-5 MuiFormControl-fullWidth-8"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="MuiInput-root-9 MuiInput-formControl-10 MuiInput-underline-13"
  >
    <input
      aria-invalid={false}
      aria-required={false}
      autoComplete={undefined}
      autoFocus={undefined}
      className="MuiInput-input-17 MuiInput-inputType-20"
      defaultValue={undefined}
      disabled={false}
      id={undefined}
      name="price"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder={undefined}
      readOnly={undefined}
      required={undefined}
      rows={undefined}
      type="number"
      value="30"
    />
    <span />
  </div>
</div>
`;

exports[`<PriceField /> renders with value, label and hint 1`] = `
<div
  className="MuiFormControl-root-5 MuiFormControl-fullWidth-8"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <label
    className="MuiFormLabel-root-27 MuiInputLabel-root-22 MuiInputLabel-formControl-23 MuiInputLabel-animated-26 MuiInputLabel-shrink-25"
    data-shrink={true}
    htmlFor="price"
  >
    Lorem
  </label>
  <div
    className="MuiInput-root-9 MuiInput-formControl-10 MuiInput-underline-13"
  >
    <input
      aria-invalid={false}
      aria-required={false}
      autoComplete={undefined}
      autoFocus={undefined}
      className="MuiInput-input-17 MuiInput-inputType-20"
      defaultValue={undefined}
      disabled={false}
      id={undefined}
      name="price"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder={undefined}
      readOnly={undefined}
      required={undefined}
      rows={undefined}
      type="number"
      value="30"
    />
    <span />
  </div>
  <p
    className="MuiFormHelperText-root-32"
  >
    Ipsum
  </p>
</div>
`;

exports[`<PriceField /> renders with value, label, currency symbol and error 1`] = `
<div
  className="MuiFormControl-root-5 MuiFormControl-fullWidth-8"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <label
    className="MuiFormLabel-root-27 MuiFormLabel-error-30 MuiInputLabel-root-22 MuiInputLabel-formControl-23 MuiInputLabel-animated-26 MuiInputLabel-shrink-25"
    data-shrink={true}
    htmlFor="price"
  >
    Lorem
  </label>
  <div
    className="MuiInput-root-9 MuiInput-error-14 MuiInput-formControl-10 MuiInput-underline-13"
  >
    <input
      aria-invalid={true}
      aria-required={false}
      autoComplete={undefined}
      autoFocus={undefined}
      className="MuiInput-input-17 MuiInput-inputType-20"
      defaultValue={undefined}
      disabled={false}
      id={undefined}
      name="price"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder={undefined}
      readOnly={undefined}
      required={undefined}
      rows={undefined}
      type="number"
      value="30"
    />
    <div
      className="MuiInputAdornment-root-36 MuiInputAdornment-positionEnd-38"
    >
      <p
        className="MuiTypography-root-39 MuiTypography-body1-48 MuiTypography-colorTextSecondary-61"
      >
        $
      </p>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-32 MuiFormHelperText-error-33"
  >
    Ipsum
  </p>
</div>
`;

exports[`<PriceRangeField /> renders when disabled 1`] = `
<div
  className="Component-widgetContainer-4"
>
  <div
    className="Component-inputContainer-1"
  >
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-disabled-12 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-disabled-12 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={true}
          id={undefined}
          name="price_min"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
    </div>
    <span
      className="Component-separator-3"
    >
      -
    </span>
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-disabled-12 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-disabled-12 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={true}
          id={undefined}
          name="price_max"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PriceRangeField /> renders with currency symbol 1`] = `
<div
  className="Component-widgetContainer-4"
>
  <div
    className="Component-inputContainer-1"
  >
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_min"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <div
          className="MuiInputAdornment-root-36 MuiInputAdornment-positionEnd-38"
        >
          <p
            className="MuiTypography-root-39 MuiTypography-body1-48 MuiTypography-colorTextSecondary-61"
          >
            $
          </p>
        </div>
      </div>
    </div>
    <span
      className="Component-separator-3"
    >
      -
    </span>
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_max"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <div
          className="MuiInputAdornment-root-36 MuiInputAdornment-positionEnd-38"
        >
          <p
            className="MuiTypography-root-39 MuiTypography-body1-48 MuiTypography-colorTextSecondary-61"
          >
            $
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PriceRangeField /> renders with hint 1`] = `
<div
  className="Component-widgetContainer-4"
>
  <div
    className="Component-inputContainer-1"
  >
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_min"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
      <p
        className="MuiFormHelperText-root-32"
      >
        Lorem ipsum
      </p>
    </div>
    <span
      className="Component-separator-3"
    >
      -
    </span>
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_max"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PriceRangeField /> renders with label 1`] = `
<div
  className="Component-widgetContainer-4"
>
  <div
    className="Component-inputContainer-1"
  >
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <label
        className="MuiFormLabel-root-27 MuiInputLabel-root-22 MuiInputLabel-formControl-23 MuiInputLabel-animated-26"
        data-shrink={false}
        htmlFor="price_min"
      >
        Lorem ipsum
      </label>
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_min"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
    </div>
    <span
      className="Component-separator-3"
    >
      -
    </span>
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_max"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PriceRangeField /> renders with label and hint 1`] = `
<div
  className="Component-widgetContainer-4"
>
  <div
    className="Component-inputContainer-1"
  >
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <label
        className="MuiFormLabel-root-27 MuiInputLabel-root-22 MuiInputLabel-formControl-23 MuiInputLabel-animated-26"
        data-shrink={false}
        htmlFor="price_min"
      >
        Lorem
      </label>
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_min"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
      <p
        className="MuiFormHelperText-root-32"
      >
        Ipsum
      </p>
    </div>
    <span
      className="Component-separator-3"
    >
      -
    </span>
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_max"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PriceRangeField /> renders with no value 1`] = `
<div
  className="Component-widgetContainer-4"
>
  <div
    className="Component-inputContainer-1"
  >
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_min"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
    </div>
    <span
      className="Component-separator-3"
    >
      -
    </span>
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_max"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PriceRangeField /> renders with value 1`] = `
<div
  className="Component-widgetContainer-4"
>
  <div
    className="Component-inputContainer-1"
  >
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_min"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value="10"
        />
        <span />
      </div>
    </div>
    <span
      className="Component-separator-3"
    >
      -
    </span>
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_max"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value="30"
        />
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PriceRangeField /> renders with value, label and error 1`] = `
<div
  className="Component-widgetContainer-4"
>
  <div
    className="Component-inputContainer-1"
  >
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <label
        className="MuiFormLabel-root-27 MuiFormLabel-error-30 MuiInputLabel-root-22 MuiInputLabel-formControl-23 MuiInputLabel-animated-26 MuiInputLabel-shrink-25"
        data-shrink={true}
        htmlFor="price_min"
      >
        Lorem
      </label>
      <div
        className="MuiInput-root-9 MuiInput-error-14 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13"
      >
        <input
          aria-invalid={true}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_min"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value="10"
        />
        <span />
      </div>
      <p
        className="MuiFormHelperText-root-32 MuiFormHelperText-error-33"
      >
        Ipsum
      </p>
    </div>
    <span
      className="Component-separator-3"
    >
      -
    </span>
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-error-14 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={true}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_max"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value="30"
        />
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PriceRangeField /> renders with value, label and hint 1`] = `
<div
  className="Component-widgetContainer-4"
>
  <div
    className="Component-inputContainer-1"
  >
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <label
        className="MuiFormLabel-root-27 MuiInputLabel-root-22 MuiInputLabel-formControl-23 MuiInputLabel-animated-26 MuiInputLabel-shrink-25"
        data-shrink={true}
        htmlFor="price_min"
      >
        Lorem
      </label>
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_min"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value="10"
        />
        <span />
      </div>
      <p
        className="MuiFormHelperText-root-32"
      >
        Ipsum
      </p>
    </div>
    <span
      className="Component-separator-3"
    >
      -
    </span>
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-20"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_max"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value="30"
        />
        <span />
      </div>
    </div>
  </div>
</div>
`;
